cambio por error

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     		<h1><strong><FONT  SIZE=4 COLOR=blue>"Un poco de Nosotros..........."</font></strong></h1>
           	
 		<p>
-		<FONT  SIZE=6 COLOR=orange><b>A</b></font>y caramba, es m&#225s que una heladeria es una experiencia de sabor y diversi&#243n. Un gran lugar con deliciosos Helados, Tortas, Jugos y Masitas, como jamas imaginaste.</p>
+		<FONT  SIZE=6 COLOR=orange><b>A</b></font>y caramba, es m&#225s que una heladeria es una experiencia de sabor y diversi&#243n. Un gran lugar con deliciosos Helados, Tortas, Jugos y Masitas, como jam&#225s imaginaste.</p>
 		<p>
 		
 <center>
